refactor: update project details

--- a/index.html
+++ b/index.html
@@ -90,48 +90,50 @@
     <a href="#" class="view-all">View all →</a>
   </div>
   <div class="projects-grid">
+
     <div class="project-card">
-      <div class="project-num">01</div>
-      <div class="project-type">NLP · LLM Fine-tuning</div>
-      <h3 class="project-name">Domain-Adaptive Language Model</h3>
+      <div class="project-num">01 </div>
+      <div class="project-type">Generative AI · RAG</div>
+      <h3 class="project-name">RAG-Based Intelligent Document QA System</h3>
       <p class="project-desc">
-        Fine-tuned a 7B parameter model on proprietary corpus using LoRA adapters.
-        Reduced inference latency by 40% while maintaining benchmark performance.
-      </p>
-      <a href="#" class="project-link">View <span>→</span></a>
+        Developed an end-to-end RAG system Implemented text chunking, embedding creation, 
+        and semantic vector indexing with FAISS Vector Database for similarity search and retrieval.
+        Integrated the LangChain framework with Large Language Models.
+        </p>
+      <a href="https://github.com/haricharnbytes/RAG_project" class="project-link">View <span>→</span></a>
     </div>
 
     <div class="project-card">
       <div class="project-num">02</div>
-      <div class="project-type">Computer Vision · Production</div>
-      <h3 class="project-name">Real-Time Anomaly Detection</h3>
+      <div class="project-type">Generative AI</div>
+      <h3 class="project-name">Text-to-SQL AI Application</h3>
       <p class="project-desc">
-        Edge-deployed CNN pipeline for industrial defect detection.
-        99.2% precision at 60fps on embedded hardware using TensorRT optimization.
+        Built a local Text-to-SQL web application that converts natural language questions into executable SQL queries
+        using a locally hosted LLM via LangChain.",
+
       </p>
-      <a href="#" class="project-link">View <span>→</span></a>
+      <a href="https://github.com/haricharnbytes/Text-to-SQL_command-Generator" class="project-link">View <span>→</span></a>
     </div>
 
     <div class="project-card">
       <div class="project-num">03</div>
-      <div class="project-type">MLOps · Infrastructure</div>
-      <h3 class="project-name">ML Platform Architecture</h3>
+      <div class="project-type">Transformers · Summarization</div>
+      <h3 class="project-name">YouTube Video Summarizer</h3>
       <p class="project-desc">
-        Designed end-to-end ML platform serving 50+ models with automated retraining,
-        drift detection, and A/B testing infrastructure.
+        Developed a Streamlit-based web app to extract YouTube transcripts and generate concise AI-powered summaries using large language models.
+        <br>Reduced manual note-taking time by over 70% for long-form video content.
       </p>
-      <a href="#" class="project-link">Case study <span>→</span></a>
+      <a href="https://github.com/haricharnbytes/youtube_video_summarizer" class="project-link">View <span>→</span></a>
     </div>
 
     <div class="project-card">
       <div class="project-num">04</div>
-      <div class="project-type">Research · Graph Neural Networks</div>
+      <div class="project-type">Classification · Machine Learning</div>
       <h3 class="project-name">Diagnostic Breast Cancer Prediction</h3>
       <p class="project-desc">
-        GNN-based entity resolution system across heterogeneous knowledge graphs.
-        Published at AAAI 2024 with open-source implementation.
+        A machine learning–based system that predicts breast cancer diagnosis using clinical and diagnostic data to support early and accurate detection.
       </p>
-      <a href="#" class="project-link">Read paper <span>→</span></a>
+      <a href="https://github.com/haricharnbytes/breast_cancer" class="project-link">View Project <span>→</span></a>
     </div>
   </div>
 </section>
