feat: icons to social links in footer

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
@@ -200,20 +201,24 @@
 <section id="contact">
   <p class="contact-label">Get in touch</p>
   <h2 class="contact-headline">Let's build something intelligent.</h2>
-  <a href="mailto:[email protected]" class="contact-email">[email protected]</a>
+  <a href="mailto: hccharankatta@gmail.com " class="contact-email"> hccharankatta@gmail.com </a>
   <div style="margin-top:48px; display:flex; gap:12px; justify-content:center;">
     <a href="#" class="btn-primary"><span>Send message</span></a>
-    <a href="#" class="btn-secondary">Download CV</a>
+    <a href="docs/Charan_s_Resume.pdf" target="_blank" class="btn-secondary">View Resume</a>
   </div>
 </section>
 
 <footer>
-  <span class="footer-copy">© 2026 AI Engineer Portfolio. All rights reserved.</span>
+  <span class="footer-copy">© 2026 Katta Hari Charan. All rights reserved.</span>
+  
   <div class="footer-links">
-    <a href="#">GitHub</a>
-    <a href="#">LinkedIn</a>
-    <a href="#">Twitter</a>
-    <a href="#">Google Scholar</a>
+    <a href="https://github.com/haricharnbytes" target="_blank">
+      <i class="fab fa-github"></i> GitHub
+    </a>
+    
+    <a href="https://www.linkedin.com/in/haricharankatta/" target="_blank">
+      <i class="fab fa-linkedin"></i> LinkedIn
+    </a>
   </div>
 </footer>
 
