feat: add skills section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <li><a href="#experience">Experience</a></li>
     <li><a href="#contact">Contact</a></li>
   </ul>
-  <button class="nav-toggle" aria-label="Menu">
+
     <span></span>
     <span></span>
   </button>
@@ -53,10 +53,7 @@
       <a href="#about" class="btn-secondary">About me</a>
     </div>
   </div>
-  <div class="scroll-hint">
-    <span>Scroll</span>
-    <div class="scroll-line"></div>
-  </div>
+
 </section>
 
 <!-- ABOUT -->
@@ -80,6 +77,69 @@
   </div>
 </section>
 
+<!-- SKILLS -->
+
+<section id="skills" class="skills-section">
+  <h2 class="skills-heading">SKILLS</h2>
+  
+  <div class="skills-grid">
+    <div class="skill-card">
+      <h3 class="skill-category-title">Languages</h3>
+      <ul class="skill-list">
+        <li>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="Python" class="skill-icon">
+          <span>Python</span>
+        </li>
+        <li>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript" class="skill-icon">
+          <span>JavaScript</span>
+        </li>
+      </ul>
+    </div>
+
+    <div class="skill-card">
+      <h3 class="skill-category-title">Frameworks</h3>
+      <ul class="skill-list">
+        <li>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" alt="React" class="skill-icon">
+          <span>React</span>
+        </li>
+        <li>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" alt="Node.js" class="skill-icon">
+          <span>Node.js</span>
+        </li>
+      </ul>
+    </div>
+
+    <div class="skill-card">
+      <h3 class="skill-category-title">Tools</h3>
+      <ul class="skill-list">
+        <li>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="Git" class="skill-icon">
+          <span>Git</span>
+        </li>
+        <li>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/docker/docker-original.svg" alt="Docker" class="skill-icon">
+          <span>Docker</span>
+        </li>
+      </ul>
+    </div>
+
+    <div class="skill-card">
+      <h3 class="skill-category-title">Cloud</h3>
+      <ul class="skill-list">
+        <li>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/amazonwebservices/amazonwebservices-original-wordmark.svg" alt="AWS" class="skill-icon">
+          <span>AWS</span>
+        </li>
+        <li>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/googlecloud/googlecloud-original.svg" alt="GCP" class="skill-icon">
+          <span>Google Cloud</span>
+        </li>
+      </ul>
+    </div>
+  </div>
+</section>
 
 <!-- PROJECTS -->
 <section id="projects">
