refactor: update skill logos

--- a/index.html
+++ b/index.html
@@ -122,6 +122,14 @@
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/docker/docker-original.svg" alt="Docker" class="skill-icon">
           <span>Docker</span>
         </li>
+         <li>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg" alt="vscode" class="skill-icon">
+          <span>Visual Studio Code</span>
+        </li>
+        <li>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/jupyter/jupyter-original.svg" alt="Jupyter" class="skill-icon">
+          <span>Jupyter Notebook</span>
+        </li>
       </ul>
     </div>
 
