refactor: update skills section

--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
   <div class="hero-content">
     <h1 class="hero-headline">Katta Hari Charan</h1>
     <p class="hero-sub">
-      Building production-grade machine learning systems, neural architectures,
-      and data pipelines that bridge research and real-world impact.
+      Machine Learning | Data Science | AI Engineering
     </p>
     <div class="hero-cta">
       <a href="#projects" class="btn-primary"><span>View Projects</span><span>→</span></a>
@@ -91,8 +90,8 @@
           <span>Python</span>
         </li>
         <li>
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript" class="skill-icon">
-          <span>JavaScript</span>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" alt="SQL" class="skill-icon">
+          <span>SQL</span>
         </li>
       </ul>
     </div>
@@ -101,8 +100,8 @@
       <h3 class="skill-category-title">Frameworks</h3>
       <ul class="skill-list">
         <li>
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" alt="React" class="skill-icon">
-          <span>React</span>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/pytorch/pytorch-original.svg" alt="pytorch" class="skill-icon">
+          <span>PyTorch</span>
         </li>
         <li>
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" alt="Node.js" class="skill-icon">
@@ -156,7 +155,6 @@
       <div class="section-label">Selected Work</div>
       <h2 class="section-title">Projects</h2>
     </div>
-    <a href="#" class="view-all">View all →</a>
   </div>
   <div class="projects-grid">
 
