feat: add github contribution graph

--- a/index.html
+++ b/index.html
@@ -76,6 +76,48 @@
   </div>
 </section>
 
+<!-- Github -->
+<section id="github-activity" style="padding: 0 48px 120px; max-width: 1200px; margin: 0 auto;">
+  
+  <div class="gh-log-card">
+    
+    <div class="gh-header">
+      <div class="gh-header-left">
+        <div class="gh-logo-box">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="var(--ink)" stroke-width="2" stroke-linecap="square" stroke-linejoin="miter">
+            <line x1="6" y1="3" x2="6" y2="15"></line>
+            <circle cx="18" cy="6" r="3"></circle>
+            <circle cx="6" cy="18" r="3"></circle>
+            <path d="M18 9a9 9 0 0 1-9 9"></path>
+          </svg>
+        </div>
+        <div class="gh-header-text">
+          <h3 class="gh-title">ACTIVITY_LOG</h3>
+        </div>
+      </div>
+      <a href="https://github.com/haricharnbytes" target="_blank" class="gh-view-profile">VIEW PROFILE &rarr;</a>
+    </div>
+
+    <hr class="gh-divider">
+
+    <div id="github-calendar-container" class="gh-calendar-wrapper"></div>
+
+    <div class="gh-legend">
+      <span>LESS</span>
+      <div class="gh-legend-blocks">
+        <div style="background: rgba(13,13,13,0.04)"></div>
+        <div style="background: rgba(13,13,13,0.25)"></div>
+        <div style="background: rgba(13,13,13,0.50)"></div>
+        <div style="background: rgba(13,13,13,0.75)"></div>
+        <div style="background: rgba(13,13,13,1.00)"></div>
+      </div>
+      <span>MORE</span>
+    </div>
+
+  </div>
+</section>
+
+
 <!-- SKILLS -->
 
 <section id="skills" class="skills-section">
